--- a/sub_akademia.html
+++ b/sub_akademia.html
@@ -147,7 +147,7 @@
       <div class="project-des">
           <div class="project-des-2">
         <h3>Cooking academy</h3>
-        <p class="lead font-weight-normal">Cooking training workshops from Poland. Conceptual page</p>
+        <p class="p lead">Cooking training workshops from Poland. Conceptual page</p>
       </div>
     </div>
     </div>
