--- a/sub_banpost.html
+++ b/sub_banpost.html
@@ -144,9 +144,8 @@
     
       <div class="project-des">
           <div class="project-des-2">
-          <span class="project-category"> ecommerce </span>
           <h3>BanPost</h3>
-          <p class="lead font-weight-normal">
+          <p class="p lead">
               Service and sale of office equipment.</p>
         </div>
         </div>
