--- a/sub_dpd.html
+++ b/sub_dpd.html
@@ -166,9 +166,8 @@
     
         <div class="project-des">
             <div class="project-des-2">
-               <span class="project-category"> 4-people agency</span>
                <h3>DPD</h3>
-               <p class="lead font-weight-normal">Lorem ipsum dolor si amet</p>
+               <p class="p lead">Lorem ipsum dolor si amet</p>
              </div>
              </div>
              </div>
