--- a/sub_platform.html
+++ b/sub_platform.html
@@ -140,12 +140,11 @@ html {
 
  <!-- Slider Big -->
 
-    <div class="image-big"style="background-image: url(img/page_title/contact_title_bg.png);">
+    <div class="image-big"style="background-image: url(img/platform/silvair_bg.png);">
       <div class="project-des">
         <div class="project-des-2">
-          <span class="project-category"> Silvair </span>
           <h3>Silvair Commissioning</h3>
-          <p class="lead font-weight-normal">
+          <p class="p lead">
               Complete solution for instalation and monitoring lighting network based on bluetooth mesh technology. Designed to support large scale installation.</p>
         </div>
         </div>
