--- a/sub_incampagna.html
+++ b/sub_incampagna.html
@@ -141,9 +141,8 @@
     
         <div class="project-des">
             <div class="project-des-2">
-               <span class="project-category"> Farmers and Producers </span>
                <h3>Incampagna</h3>
-               <p class="lead font-weight-normal">Lorem ipsum dolor </p>
+               <p class="p lead">Lorem ipsum dolor </p>
              </div>
              </div>
              </div>
