--- a/sub_kalyhost.html
+++ b/sub_kalyhost.html
@@ -141,9 +141,8 @@
     
         <div class="project-des">
             <div class="project-des-2">
-               <span class="project-category">Concept page</span>
                <h3>Hosting company</h3>
-               <p class="lead font-weight-normal">Lorem ipsum dolor si amet</p>
+               <p class="p lead">Lorem ipsum dolor si amet</p>
              </div>
              </div>
              </div>
