--- a/sub_klif.html
+++ b/sub_klif.html
@@ -141,9 +141,8 @@
     
         <div class="project-des">
             <div class="project-des-2">
-               <span class="project-category"> Shoping mall website</span>
                <h3>Klif</h3>
-               <p class="lead font-weight-normal">Lorem ipsum dolor si amet</p>
+               <p class="p lead">Lorem ipsum dolor si amet</p>
              </div>
              </div>
              </div>
