--- a/sub_pethome.html
+++ b/sub_pethome.html
@@ -142,9 +142,8 @@
     
       <div class="project-des">
           <div class="project-des-2">
-          <span class="project-category"> Social network </span>
           <h3>Pethome</h3>
-          <p class="lead font-weight-normal">
+          <p class="p lead">
               Lorem ipsum</p>
         </div>
         </div>
